Eliminate raw types: delete LinkedIterator, fix ListMap.EMPTY, generify APIs
- Delete LinkedIterator (type-erasure hack) and replace with
  Stream.concat/ArrayList at all call sites
- Add ListMap.empty() typed factory method; replace all ListMap.EMPTY usages
- Replace raw List[] in Parser.parseModifiers with typed ParsedModifiers record
- Generify Injector.supplierOf to Function<Object, Object>
- Fix raw Class/HashSet/ArrayList/WatchEvent/CaseManager across codebase
- Use var and streams where types are clear from context
- Remove PLAN.md

Warning reduction: 189 → ~130 raw/unchecked warnings (~59 eliminated).
Remaining are medium/hard items: CompletableFuture async plumbing,
AstNode reflective walking, ServiceContext op metadata, and inherent
Java erasure limitations (generic arrays, AtomicReferenceFieldUpdater).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>